# qa-api

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: config.py  main.py  schemas.py
app/database/: db.py  db_depends.py  models.py
app/routers/: __init__.py  answers.py  questions.py
migrations/: env.py
migrations/versions/: 7aa1d65ae696_initial_migration.py
tests/: conftest.py  test_answers.py  test_cascade_delete.py  test_delete_answer.py  test_delete_nonexistanswer.py  test_question.py
