[project]
name = "qa-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.121.3",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.44",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "httpx>=0.28.1",
    "pre-commit>=4.4.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.6",
]

[tool.ruff]
line-length = 100
target-version = "py313"
fix = true
show-fixes = true
extend-select = ["I", "UP", "B", "SIM", "TCH"]
ignore = ["E501", "B008"]
exclude = [
    "env.py",]

[tool.black]
line-length = 100
target-version = ['py313']

[tool.ruff.lint.isort]
known-first-party = ["app"]
combine-as-imports = true
